[project]
name = "fastapi-mock-middleware"
description = "FastAPI middleware for mocking response data of non-implemented endpoints"
authors = [
          { name="Niyaz Batyrshin", email="Niyaz.Batyrshin@gmail.com" },
]
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["fastapi", "mock", "mock API", "mock fastapi", "mock response", "API first"]
classifiers = [
              "Programming Language :: Python :: 3",
              "License :: OSI Approved :: MIT License",
              "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
               "fastapi>=0.103.0",
               "polyfactory>=2.8.0",
]

[project.optional-dependencies]
test = [
       "pytest",
       "pytest-asyncio",
       "pytest-cov",
       "flake8",
       "httpx",
]
dev = [
    "uvicorn",
    "ipython",
]

[project.urls]
homepage = "https://NiyazNz.github.io/fastapi-mock-middleware"
repository = "https://github.com/NiyazNz/fastapi-mock-middleware.git"
issues = "https://github.com/NiyazNz/fastapi-mock-middleware/issues"

[tool.setuptools]
packages = ["fastapi_mock_middleware"]

[tool.setuptools_scm]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=7.1.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
